--- a/language/javascript/react/demo/docker-compose.yml
+++ b/language/javascript/react/demo/docker-compose.yml
@@ -3,9 +3,13 @@ services:
   node:
     image: react-demo/node
     build: docker/node
-    expose:
-      - ${HOST_PORT_NODE}
+    environment:
+      NODE_ENV: development
+      PORT: ${PORT_CONTAINER_NODE}
+    ports:
+      - ${PORT_HOST_NODE}:${PORT_CONTAINER_NODE}
     volumes:
       - .:/volumes/demo
     working_dir: /volumes/demo
+    command: npm start
 
